--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,12 @@ http {
         listen 80;
         server_name localhost;
 
+        # 定义backend_url变量，如果环境变量BACKEND_URL不存在，则使用默认值
+        set $backend_url http://backend:8080;
+        if ($BACKEND_URL) {
+            set $backend_url $BACKEND_URL;
+        }
+
         location / {
             root /usr/share/nginx/html;
             index index.html index.htm;
@@ -29,7 +35,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass $BACKEND_URL/api/;
+            proxy_pass $backend_url/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
