--- a/nginx.conf
+++ b/nginx.conf
@@ -22,12 +22,6 @@ http {
         listen 80;
         server_name localhost;
 
-        # 定义backend_url变量，如果环境变量BACKEND_URL不存在，则使用默认值
-        set $backend_url http://backend:8080;
-        if ($BACKEND_URL) {
-            set $backend_url $BACKEND_URL;
-        }
-
         location / {
             root /usr/share/nginx/html;
             index index.html index.htm;
@@ -35,7 +29,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass $backend_url/api/;
+            proxy_pass http://backend:8080/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
