--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "vuex": "^4.1.0",
     "element-plus": "^2.2.28",
     "axios": "^1.2.2",
-    "echarts": "^5.4.0"
-  },
-  "devDependencies": {
+    "echarts": "^5.4.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "vite": "^4.0.0"
   },
+  "devDependencies": {},
   "keywords": [
     "vue3",
     "element-plus",
