Add custom nginx configuration and update port to 8080

--- a/railway.toml
+++ b/railway.toml
@@ -5,3 +5,6 @@ dockerfilePath = "Dockerfile"
 [deploy]
 startCommand = "nginx -g 'daemon off;'"
 restartPolicyType = "ON_FAILURE"
+
+[service]
+port = 8080
