--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 
 # 生产环境配置
-VITE_API_BASE_URL=https://backend-production-6929.up.railway.app
+VITE_API_BASE_URL=https://backend-production-ed8f.up.railway.app/
