--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,19 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+        # API反向代理
+        location /api/ {
+            proxy_pass https://backend-production-ed8f.up.railway.app/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_ssl_server_name on;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+
         # Gzip压缩
         gzip on;
         gzip_vary on;
