--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
 
         # API反向代理
         location /api/ {
-            proxy_pass https://backend-production-ed8f.up.railway.app/api/;
+            proxy_pass https://backend-production-ed8f.up.railway.app/vehicle-management/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
