更新nginx配置和添加环境变量以适应Railway部署

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,8 +23,8 @@ http {
 
         # API反向代理
         location /api/ {
-            proxy_pass https://backend-production-ed8f.up.railway.app/vehicle-management/api/;
-            proxy_set_header Host backend-production-ed8f.up.railway.app;
+            proxy_pass $BACKEND_URL/vehicle-management/api/;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
