修复nginx环境变量配置，使用OpenResty支持Lua脚本

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,9 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    # 设置后端URL，优先使用环境变量
+    set_by_lua $backend_url 'return os.getenv("BACKEND_URL") or "https://backend-production-ed8f.up.railway.app"';
+
     server {
         listen 8080;
         server_name _;
@@ -23,7 +26,7 @@ http {
 
         # API反向代理
         location /api/ {
-            proxy_pass $BACKEND_URL/vehicle-management/api/;
+            proxy_pass $backend_url/vehicle-management/api/;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
