--- a/nginx.conf
+++ b/nginx.conf
@@ -23,8 +23,7 @@ http {
 
         # API反向代理
         location /api/ {
-            set $backend_upstream https://backend-production-94368.up.railway.app;
-            proxy_pass $backend_upstream/vehicle-management$request_uri;
+            proxy_pass https://backend-production-94368.up.railway.app/vehicle-management/api/;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
