--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
         location /api/ {
             rewrite ^/api/(.*)$ /vehicle-management/api/$1 break;
             proxy_pass https://backend-production-94368.up.railway.app;
-            proxy_set_header Host $http_host;
+            proxy_set_header Host backend-production-94368.up.railway.app;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
